--- a/index.html
+++ b/index.html
@@ -250,50 +250,27 @@
           <figure>
             <div>
               <table>
-                <thead>
-                  <tr>
-                    <th>Year</th>
-                    <th>Laureate</th>
-                    <th>Rationale</th>
-                  </tr>
-                </thead>
                 <tbody>
                   <tr>
-                    <td>2018</td>
-                    <td>Denis Mukwege and Nadia Murad</td>
-                    <td>for their efforts to end the use of sexual violence as a weapon of war and armed conflict.</td>
+                    <td><code>&lt;em&gt;</code></td>
+                    <td><strong>emphasis</strong></td>
+                    <td>Use it for adding <em>emphasis</em> to a word, compared to surrounding text. Example: "We <em>had</em> to do something about it."</td>
                   </tr>
                   <tr>
-                    <td>2017</td>
-                    <td>International Campaign to Abolish Nuclear Weapons (ICAN)</td>
-                    <td>for its work to draw attention to the catastrophic humanitarian consequences of any use of nuclear weapons and for its ground-breaking efforts to achieve a treaty-based prohibition of such weapons</td>
+                    <td><code>&lt;strong&gt;</code></td>
+                    <td><strong>importance</strong></td>
+                    <td>Use it to mark text that has greater importance than surrounding text. Example: "<strong>Warning!</strong> This is <strong>very dangerous</strong>."</td>
                   </tr>
                   <tr>
-                    <td>2016</td>
-                    <td>Juan Manuel Santos</td>
-                    <td>for his resolute efforts to bring the country's more than 50-year-long civil war to an end, a war that has cost the lives of at least 220,000 Colombians and displaced close to six million people</td>
-                  </tr>
-                  <tr>
-                    <td>2015</td>
-                    <td>Tunisian National Dialogue Quartet</td>
-                    <td>for its decisive contribution to the building of a pluralistic democracy in Tunisia in the wake of the Jasmine Revolution of 2011</td>
-                  </tr>
-                 <tr>
-                    <td>2014</td>
-                    <td>Kailash Satyarthi and Malala Yousafzai</td>
-                    <td>for their struggle against the suppression of children and young people and for the right of all children to education</td>
-                  </tr>
-                 <tr>
-                    <td>2013</td>
-                    <td>Organization for the Prohibition of Chemical Weapons (OPCW)</td>
-                    <td>for its extensive efforts to eliminate chemical weapons</td>
+                    <td><code>&lt;mark&gt;</code></td>
+                    <td><strong>relevance</strong></td>
+                    <td>Use it to denote content which has a degree of relevance, for example highlighting search results.</td>
                   </tr>
                 </tbody>
               </table>
             </div>
             <figcaption>
-              <h1>Latest Nobel peace prizes</h1>
-              <p>Data taken from <a href="https://en.wikipedia.org/wiki/List_of_Nobel_Peace_Prize_laureates">wikipedia</a>.</p>
+              <p>We take the opportunity of this example to describe the semantic meaning of elements <code>&lt;em&gt;</code>, <code>&lt;strong&gt;</code> and <code>&lt;mark&gt;</code>. Examples are taken from the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/strong">MDN web docs</a>.</p>
             </figcaption>
           </figure>
           <figure>
@@ -320,88 +297,37 @@
   &lt;/div&gt;
 &lt;/figure&gt;</code></pre>
             <figcaption>
-              <p>Code snippet of a table of two columns, with a heading and two rows. Note that, differently from images and videos, there is an extra <code>&lt;div&gt;</code> container wrapping the <code>&lt;table&gt;</code> element.</p>
+              <p>Code snippet of a table of two columns, with a heading and two rows. Use part <code>&lt;thead&gt;</code> for defining the head of the columns of the table, use instead part <code>&lt;tbody&gt;</code> for the body of the table. Note that, differently from images and videos, there is an extra <code>&lt;div&gt;</code> container wrapping the <code>&lt;table&gt;</code> element.</p>
             </figcaption>
           </figure>
         </section>
 
         <section>
           <h1>Lists</h1>
-          <p>As usual, lists are created with tags <code>&lt;ul&gt;</code> and <code>&lt;ol&gt;</code>, whereas <code>&lt;li&gt;</code> element is used to represent an item in a list. Each item may containg a <code>&lt;span&gt;</code> element and one or more <code>&lt;p&gt;</code> elements. The width of the two elements follow different rules:</p>
-          <div>
-            <ul>
-              <li>
-                <span>●</span>
-                <p>Element <code>&lt;span&gt;</code> has a fixed width, use it for adding numbers (<code>&lt;span&gt;1.&lt;/span&gt;</code>) or bulletts (<code>&lt;span&gt;●&lt;/span&gt;</code>) in front of each item. Element <code>&lt;span&gt;</code> is optional.</p>
-              </li>
-              <li>
-                <span>●</span>
-                <p>Elements <code>&lt;p&gt;</code> also have a fixed width, with the exception of the last child which grows in width untill the remaining space is filled. Use at least one <code>&lt;p&gt;</code> element.</p>
-              </li>
-            </ul>
-          </div>
+          <p>As usual, lists are created with tags <code>&lt;ul&gt;</code> and <code>&lt;ol&gt;</code>, whereas <code>&lt;li&gt;</code> element is used to represent list items.</p>
+          <ul>
+            <li>
+              <p>use tag <code>&lt;ol&gt;</code> for ordered lists</p>
+            </li>
+            <li>
+              <p>use tag <code>&lt;ul&gt;</code> for unordered lists</p>
+            </li>
+          </ul>
           <figure>
-            <pre><code>&lt;div&gt;
-  &lt;ul&gt;
-    &lt;li&gt;
-      &lt;span&gt;●&lt;/span&gt;
-      &lt;p&gt;...&lt;/p&gt;
-    &lt;/li&gt;
-    &lt;li&gt;
-      &lt;span&gt;●&lt;/span&gt;
-      &lt;p&gt;...&lt;/p&gt;
-    &lt;/li&gt;
-  &lt;/ul&gt;
-&lt;/div&gt;</code></pre>
+            <pre><code>&lt;ul&gt;
+  &lt;li&gt;
+    &lt;p&gt;...&lt;/p&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;p&gt;...&lt;/p&gt;
+  &lt;/li&gt;
+&lt;/ul&gt;</code></pre>
             <figcaption>
-              <p>Code snippet for a list of items, use tag <code>&lt;ol&gt;</code> for ordered lists and tag <code>&lt;ul&gt;</code> for unordered lists.</p>
-            </figcaption>
-          </figure>
-          <p><small>Hey, we have a sub-heading here, get it with tag <code>&lt;h2&gt;</code> in a section.</small></p>
-          <h2>A second example</h2>
-          <p>As second example we show a list where each item has a couple of fixed width <code>&lt;p&gt;</code> elements and a single growing width <code>&lt;p&gt;</code> element.</p>
-          <p><small>We take the opportunity of this example to describe the semantic meaning of elements <code>&lt;em&gt;</code>, <code>&lt;strong&gt;</code> and <code>&lt;mark&gt;</code>.</small></p>
-          <div>
-            <ol>
-              <li>
-                <p><code>&lt;em&gt;</code></p>
-                <p><strong>emphasis</strong></p>
-                <p>Use it for adding <em>emphasis</em> to a word, compared to surrounding text. Example: "Is this the <em>queen</em> of the questions?"</p>
-              </li>
-              <li>
-                <p><code>&lt;strong&gt;</code></p>
-                <p><strong>importance</strong></p>
-                <p>Use it to mark text that has greater <em>importance</em> than surrounding text. Example: "Do a small walk <strong>every hour</strong>."</p>
-              </li>
-              <li>
-                <p><code>&lt;mark&gt;</code></p>
-                <p><strong>relevance</strong></p>
-                <p>Use it to denote content which has a degree of <em>relevance</em>. Example: "Words that match a search operation will be <mark>highlighted</mark>".</p>
-              </li>
-            </ol>
-          </div>
-          <figure>
-            <pre><code>&lt;div&gt;
-  &lt;ul&gt;
-    &lt;li&gt;
-      &lt;p&gt;...&lt;/p&gt;
-      &lt;p&gt;...&lt;/p&gt;
-      &lt;p&gt;...&lt;/p&gt;
-    &lt;/li&gt;
-    &lt;li&gt;
-      &lt;p&gt;...&lt;/p&gt;
-      &lt;p&gt;...&lt;/p&gt;
-      &lt;p&gt;...&lt;/p&gt;
-    &lt;/li&gt;
-    &lt;li&gt;
-      &lt;p&gt;...&lt;/p&gt;
-      &lt;p&gt;...&lt;/p&gt;
-      &lt;p&gt;...&lt;/p&gt;
-    &lt;/li&gt;
-  &lt;/ul&gt;
-&lt;/div&gt;</code></pre>
-            <figcaption>
-              <p>Note that only the last <code>&lt;p&gt;</code> element grows in width, whereas the first two <code>&lt;p&gt;</code> elements have a fixed width.</p>
+              <p>Use <code>&lt;ol&gt;</code> element when the order is meaningful, ordered list are rendered as a numbered list:</p>
+              <ol>
+                <li><p>first item</p></li>
+                <li><p>second item</p></li>
+              </ol>
             </figcaption>
           </figure>
         </section>
