close #87 | tables should look like tables

--- a/index.html
+++ b/index.html
@@ -250,6 +250,13 @@
           <figure>
             <div>
               <table>
+                <thead>
+                  <tr>
+                    <th>Tag</th>
+                    <th>Meaning</th>
+                    <th>Description</th>
+                  </tr>
+                </thead>
                 <tbody>
                   <tr>
                     <td><code>&lt;em&gt;</code></td>
@@ -264,7 +271,7 @@
                   <tr>
                     <td><code>&lt;mark&gt;</code></td>
                     <td><strong>relevance</strong></td>
-                    <td>Use it to denote content which has a degree of relevance, for example highlighting search results.</td>
+                    <td>Use it to denote content which has a degree of relevance, for example highlighting search results or code fragments.</td>
                   </tr>
                 </tbody>
               </table>
