close #83 | add header image

--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
   &lt;/figure&gt;
 &lt;/section&gt;</code></pre>
             <figcaption>
-              <p>Code snippet of an image, with a descriptive caption. For preparatory purpose, tag <code>&lt;figure&gt;</code> has been presented within a section with a heading and two paragraphs.</p>
+              <p>Code snippet of an image, with a descriptive caption. For explanatory purpose, tag <code>&lt;figure&gt;</code> has been presented within a section with a heading and two paragraphs.</p>
+              <p>Images can also be inserted in the article header, in that case, the image will have full width.</p>
             </figcaption>
           </figure>
           <p>Exactly the same html snipped is used for displaying videos, with the obvious difference of using tag <code>&lt;video&gt;</code> in place of tag <code>&lt;img&gt;</code>, as shown below.</p>
@@ -196,14 +197,14 @@
           </figure>
           <figure>
             <pre><code>&lt;figure&gt;
-  &lt;video controls muted src="video.mp4"&gt;
+  &lt;video controls muted src="video.mp4"&gt;&lt;/video&gt;
   &lt;figcaption&gt;
     &lt;h1&gt;...&lt;/h1&gt;
     &lt;p&gt;...&lt;/p&gt;
   &lt;/figcaption&gt;
 &lt;/figure&gt;</code></pre>
             <figcaption>
-              <p>Code snippet of a video with a caption, the latter having a heading and a paragraph.</p>
+              <p>Code snippet of a video with a caption, the latter having a heading and a paragraph. As with images, videos can be inserted in the article header as well.</p>
             </figcaption>
           </figure>
         </section>
