close #31 | create an icon

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           </ul>
         </nav>
         <button><a href="#">close menu</a></button>
+        <img src="./media/icon.svg"></img>
       </header>
       <article>
         <header>
