close #96 | fix style for author avatar

--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
       &lt;p&gt;...&lt;/p&gt;
       &lt;p&gt;...&lt;/p&gt;
       &lt;address&gt;
-        ... &lt;a href="..."&gt...&lt;/a&gt;
+        &lt;img src="..."&gt;
+        ...
+        &lt;a href="..."&gt...&lt;/a&gt;
       &lt;/address&gt;
     &lt;/header&gt;</mark>
     ...
