close #98 | pictures inside side comments

--- a/index.html
+++ b/index.html
@@ -142,19 +142,17 @@
 
         <section>
           <h1>Side comments</h1>
-          <p>This section describes how to add a <strong>side comment</strong>. Side comments typically show parenthetical content considered part of the main flow, like qualifying remarks directly related to the section.<small>Hello, I am a side comment. I am quite good in telling anecdotes or cool details, read me if you want, you don't have to.</small></p>
+          <p>This section describes how to add a <strong>side comment</strong>. Side comments typically show parenthetical content considered part of the main flow, like qualifying remarks directly related to the section.<small>Side comments are related to the paragraph, therefore they usually appear right or below the text of the paragraph. <img src="./media/ga.jpg"> As indicated in the code snippet, side comments may also contain pictures, added by means of the <code>&lt;img&gt;</code> tag.</small></p>
           <p>A side comment should be inserted within the paragraph of a section, it will appear at the right of the paragraph and vertically aligned with it, or just below the paragraph on smaller screens.</p>
           <figure>
             <pre><code>&lt;section&gt;
   &lt;h1&gt;...&lt;/h1&gt;
   &lt;p&gt;
     ...<mark>
-    &lt;small&gt;...&lt;/small&gt;</mark>
+    &lt;small&gt;...&lt;img src="..."&gt;...&lt;/small&gt;</mark>
+    ...
   &lt;/p&gt;
 &lt;/section&gt;</code></pre>
-            <figcaption>
-              <p>Code snippet of a side comment. The side comment is related to the paragraph, therefore it usually appears below the text of the paragraph.</p>
-            </figcaption>
           </figure>
         </section>
 
