close #80 | restyle pre tags

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
           <p>The previous section shows a gap within the <code>&lt;article&gt;...&lt;/article&gt;</code> tags, you can fill the gap with <strong>section</strong> snippets. Typically, sections have a heading and one or more paragraphs, but not only, as we will see sections may also contain figures, tables and much more.</p>
           <figure>
             <pre><code>&lt;main&gt;
-  &lt;article&gt;<mark>
-    &lt;section&gt;
+  &lt;article&gt;</code>
+<mark><code>    &lt;section&gt;
       &lt;h1&gt;...&lt;/h1&gt;
       &lt;p&gt;...&lt;/p&gt;
       &lt;p&gt;...&lt;/p&gt;
-    &lt;/section&gt;</mark>
-  &lt;/article&gt;
+    &lt;/section&gt;</code></mark>
+<code>  &lt;/article&gt;
 &lt;/main&gt;</code></pre>
             <figcaption>
               <p>A section with a heading and two paragraphs.</p>
@@ -116,11 +116,11 @@
 
         <section>
           <h1>Title and abstract</h1>
-          <p>Element <code>&lt;header&gt;</code> is used for the title and few introductory paragraphs of your document. Generally, it is placed as first element withing the <code>&lt;article&gt;</code> tag.</p>
+          <p>Element <code>&lt;header&gt;</code> is used for the title and few introductory paragraphs of your document. Generally, it is placed as first element within the <code>&lt;article&gt;</code> tag.</p>
           <figure>
             <pre><code>&lt;main&gt;
-  &lt;article&gt;<mark>
-    &lt;header&gt;
+  &lt;article&gt;</code>
+<mark><code>    &lt;header&gt;
       &lt;h1&gt;...&lt;/h1&gt;
       &lt;p&gt;...&lt;/p&gt;
       &lt;p&gt;...&lt;/p&gt;
@@ -129,8 +129,8 @@
         ...
         &lt;a href="..."&gt...&lt;/a&gt;
       &lt;/address&gt;
-    &lt;/header&gt;</mark>
-    ...
+    &lt;/header&gt;</code></mark>
+<code>    ...
   &lt;/article&gt;
 &lt;/main&gt;</code></pre>
             <figcaption>
@@ -148,9 +148,9 @@
             <pre><code>&lt;section&gt;
   &lt;h1&gt;...&lt;/h1&gt;
   &lt;p&gt;
-    ...<mark>
-    &lt;small&gt;...&lt;img src="..."&gt;...&lt;/small&gt;</mark>
-    ...
+    ...</code>
+<mark><code>    &lt;small&gt;...&lt;img src="..."&gt;...&lt;/small&gt;</code></mark>
+<code>    ...
   &lt;/p&gt;
 &lt;/section&gt;</code></pre>
           </figure>
@@ -168,15 +168,15 @@
           <figure>
             <pre><code>&lt;section&gt;
   &lt;h1&gt;...&lt;/h1&gt;
-  &lt;p&gt;...&lt;/p&gt;<mark>
-  &lt;figure&gt;
+  &lt;p&gt;...&lt;/p&gt;</code>
+<mark><code>  &lt;figure&gt;
     &lt;img src="image.jpg"&gt;
     &lt;figcaption&gt;
       &lt;h1&gt;...&lt;/h1&gt;
       &lt;p&gt;...&lt;/p&gt;
     &lt;/figcaption&gt;
-  &lt;/figure&gt;</mark>
-  &lt;p&gt;...&lt;/p&gt;
+  &lt;/figure&gt;</code></mark>
+<code>  &lt;p&gt;...&lt;/p&gt;
 &lt;/section&gt;</code></pre>
             <figcaption>
               <p>Code snippet of an image, with a descriptive caption. For explanatory purpose, tag <code>&lt;figure&gt;</code> has been presented within a section with a heading and two paragraphs.</p>
@@ -193,15 +193,15 @@
           <figure>
             <pre><code>&lt;section&gt;
   &lt;h1&gt;...&lt;/h1&gt;
-  &lt;p&gt;...&lt;/p&gt;<mark>
-  &lt;figure&gt;
+  &lt;p&gt;...&lt;/p&gt;</code>
+<mark><code>  &lt;figure&gt;
     &lt;video controls muted src="video.mp4"&gt;&lt;/video&gt;
     &lt;figcaption&gt;
       &lt;h1&gt;...&lt;/h1&gt;
       &lt;p&gt;...&lt;/p&gt;
     &lt;/figcaption&gt;
-  &lt;/figure&gt;</mark>
-  &lt;p&gt;...&lt;/p&gt;
+  &lt;/figure&gt;</code></mark>
+<code>  &lt;p&gt;...&lt;/p&gt;
 &lt;/section&gt;</code></pre>
             <figcaption>
               <p>Code snippet of a video with a caption, the latter having a heading and a paragraph. As with images, videos can be inserted in the article header as well.</p>
@@ -219,12 +219,12 @@
           <figure>
             <pre><code>&lt;section&gt;
   &lt;h1&gt;...&lt;/h1&gt;
-  &lt;p&gt;...&lt;/p&gt;<mark>
-  &lt;blockquote cite="..."&gt;
+  &lt;p&gt;...&lt;/p&gt;</code>
+<mark><code>  &lt;blockquote cite="..."&gt;
     &lt;p&gt;...&lt;/p&gt;
   &lt;/blockquote&gt;
-  &lt;cite&gt;...&lt;/cite&gt;</mark>
-  &lt;p&gt;...&lt;/p&gt;
+  &lt;cite&gt;...&lt;/cite&gt;</code></mark>
+<code>  &lt;p&gt;...&lt;/p&gt;
 &lt;/section&gt;</code></pre>
             <figcaption>
               <p>HTML snippet of a quotation from another source.</p>
@@ -242,11 +242,11 @@
           <figure>
             <pre><code>&lt;section&gt;
   &lt;h1&gt;...&lt;/h1&gt;
-  &lt;p&gt;...&lt;/p&gt;<mark>
-  &lt;aside&gt;
+  &lt;p&gt;...&lt;/p&gt;</code>
+<mark><code>  &lt;aside&gt;
     &lt;p&gt;...&lt;/p&gt;
-  &lt;/aside&gt;</mark>
-  &lt;p&gt;...&lt;/p&gt;
+  &lt;/aside&gt;</code></mark>
+<code>  &lt;p&gt;...&lt;/p&gt;
 &lt;/section&gt;</code></pre>
             <figcaption>
               <p>HTML snippet of an highlight.</p>
@@ -257,7 +257,7 @@
 
         <section>
           <h1>Tables</h1>
-          <p>As well as with images and videos, tables also are displayed withing a figure and can be described by a caption. Tables are useful for displaying tabular data and they are disegned to visualise several columns: if the table is bigger than the window width the hidden part is visible through mouse scrolling.</p>
+          <p>As well as with images and videos, tables also are displayed within a figure and can be described by a caption. Tables are useful for displaying tabular data and they are disegned to visualise several columns: if the table is bigger than the window width the hidden part is visible through mouse scrolling.</p>
           <figure>
             <div>
               <table>
@@ -294,8 +294,8 @@
           <figure>
             <pre><code>&lt;section&gt;
   &lt;h1&gt;...&lt;/h1&gt;
-  &lt;p&gt;...&lt;/p&gt;<mark>
-  &lt;figure&gt;
+  &lt;p&gt;...&lt;/p&gt;</code>
+<mark><code>  &lt;figure&gt;
     &lt;div&gt;
       &lt;table&gt;
         &lt;thead&gt;
@@ -316,8 +316,8 @@
         &lt;/tbody&gt;
       &lt;/table&gt;
     &lt;/div&gt;
-  &lt;/figure&gt;</mark>
-  &lt;p&gt;...&lt;/p&gt;
+  &lt;/figure&gt;</code></mark>
+<code>  &lt;p&gt;...&lt;/p&gt;
 &lt;/section&gt;</code></pre>
             <figcaption>
               <p>Code snippet of a table of two columns, with a heading and two rows. Use part <code>&lt;thead&gt;</code> for defining the head of the columns of the table, use instead part <code>&lt;tbody&gt;</code> for the body of the table. Note that, differently from images and videos, there is an extra <code>&lt;div&gt;</code> container wrapping the <code>&lt;table&gt;</code> element.</p>
@@ -339,16 +339,16 @@
           <figure>
             <pre><code>&lt;section&gt;
   &lt;h1&gt;...&lt;/h1&gt;
-  &lt;p&gt;...&lt;/p&gt;<mark>
-  &lt;ul&gt;
+  &lt;p&gt;...&lt;/p&gt;</code>
+<mark><code>  &lt;ul&gt;
     &lt;li&gt;
       &lt;p&gt;...&lt;/p&gt;
     &lt;/li&gt;
     &lt;li&gt;
       &lt;p&gt;...&lt;/p&gt;
     &lt;/li&gt;
-  &lt;/ul&gt;</mark>
-  &lt;p&gt;...&lt;/p&gt;
+  &lt;/ul&gt;</code></mark>
+<code>  &lt;p&gt;...&lt;/p&gt;
 &lt;/section&gt;</code></pre>
             <figcaption>
               <p>Use <code>&lt;ol&gt;</code> element when the order is meaningful, ordered list are rendered as a numbered list:</p>
@@ -370,9 +370,9 @@
             </figcaption>
           </figure>
           <figure>
-            <pre><code>&lt;figure&gt;
-  <mark>&lt;pre&gt;&lt;code&gt;...&lt;/code&gt;&lt;/pre&gt;</mark>
-&lt;/figure&gt;</code></pre>
+            <pre><code>&lt;figure&gt;</code>
+<mark><code>  &lt;pre&gt;&lt;code&gt;...&lt;/code&gt;&lt;/pre&gt;</code></mark>
+<code>&lt;/figure&gt;</code></pre>
             <figcaption>
               <p>Wrap the <code>&lt;code&gt;</code> element within a <code>&lt;pre&gt;</code> element to add multiple lines of code.</p>
             </figcaption>
@@ -417,6 +417,18 @@
 &lt;/figure&gt;</code></pre>
             <figcaption>
               <p>Snippet used for writing the HTML code of <a href="#listing1">listing 1</a>.</p>
+            </figcaption>
+          </figure>
+          <h2>Highlighting code</h2>
+          <p>You can highlight code in two different ways: inline or for multiple lines. Highlighting a portion of a line can be done using tag <code>&lt;mark&gt;</code> as in <code>&lt;code&gt;...&lt;mark&gt;...&lt;/mark&gt;...&lt;/code&gt;</code>. Instead, one or more lines of code can be fully highlighted wrapping the full line within tag <code>&lt;mark&gt;</code>, as in <code>&lt;mark&gt;&lt;code&gt;...&lt;/code&gt;&lt;/mark&gt;</code>. The next snippet shows an example.</p>
+          <figure>
+            <pre><code>&lt;figure&gt;</code>
+<code>  &lt;pre&gt;&lt;code&gt;...&lt;/code&gt;</code>
+<mark><code>&lt;mark&gt;&lt;code&gt;...&lt;/code&gt;&lt;/mark&gt;</code></mark>
+<code>&lt;code&gt;...&lt;/code&gt;&lt;/pre&gt;</code>
+<code>&lt;/figure&gt;</code></pre>
+            <figcaption>
+              <p>Highlight multiple lines of code. Note that, within <code>&lt;pre&gt;</code> tags, indetation spaces and new lines are displayed on screen, therefore they deserve a special attention in order to represent the right code indentation.</p>
             </figcaption>
           </figure>
         </section>
@@ -487,8 +499,8 @@
           <p>The present section describes how to add a navigation menu at the top of your document. The menu may have one or more links to external resources, like other web pages, or links to sections of the same document as well.</p>
           <p>As with all the other features, having a menu is optional and it is up to you if the document provides a navigation or not. For the menu we use the element <code>&lt;nav&gt;</code> inside the document header. Note that the document header is created with element <code>&lt;header&gt;</code>, which is positioned in <code>&lt;main&gt;</code> just before the <code>&lt;article&gt;</code> element.</p>
           <figure>
-            <pre><code>&lt;main&gt;<mark>
-  &lt;header&gt;
+            <pre><code>&lt;main&gt;</code>
+<mark><code>  &lt;header&gt;
     &lt;button&gt;&lt;a href="#"&gt;☰&lt;/a&gt;&lt;/button&gt;
     &lt;nav class="nav"&gt;
       &lt;ul&gt;
@@ -502,8 +514,8 @@
       &lt;/ul&gt;
     &lt;/nav&gt;
     &lt;button&gt;&lt;a href="#"&gt;close menu&lt;/a&gt;&lt;/button&gt;
-  &lt;/header&gt;</mark>
-  &lt;article&gt;
+  &lt;/header&gt;</code></mark>
+<code>  &lt;article&gt;
     ...
   &lt;/article&gt;
 &lt;/main&gt;</code></pre>
@@ -525,11 +537,11 @@
           <p>This section describes how place the copyright notice at the bottom of the document. You can add a copyright notice through a paragraph <code>&lt;p&gt;</code> within a <code>&lt;footer&gt;</code> element. Note that <code>&lt;footer&gt;</code> has to be the last child of element <code>&lt;main&gt;</code>.</p>
           <figure>
             <pre><code>&lt;main&gt;
-  ...<mark>
-  &lt;footer&gt;
+  ...</code>
+<mark><code>  &lt;footer&gt;
     &lt;p&gt;&lt;small&gt;...&lt;/small&gt;&lt;/p&gt;
-  &lt;/footer&gt;</mark>
-&lt;/main&gt;</code></pre>
+  &lt;/footer&gt;</code></mark>
+<code>&lt;/main&gt;</code></pre>
             <figcaption>
               <p>Code snippet for stating content attribution or licensing.</p>
             </figcaption>
