close #107 | organise CSS code

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
           <h1>Rapido: semantic HTML elements for your writings.</h1>
           <p>Rapido provides a default style for a set of <strong>semantic HTML</strong> elements that you can use to compose your essays. No CSS or JS is required.</p>
           <p>The present document has been created using Rapido, you can easily get documents or blog posts with the same layout and style. See how to use Rapido in the next sections.</p>
-          <p>Rapido is open source, view it on <a href="https://github.com/nextbitlabs/Rapido">Github</a>.
-          </p>
+          <p>Rapido is open source, view it on <a href="https://github.com/nextbitlabs/Rapido">Github</a>.</p>
         </header>
         <section>
           <h1>Motivation</h1>
