close #27 | use the img element as child of the section element

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 &lt;/section&gt;</code></pre>
             <figcaption>
               <h1>Code snippet of an image, with a descriptive caption.</h1>
-              <p>The article header may contain a picture as well, in that case, the image will have full width.</p>
+              <p>The <code>&lt;figure&gt;</code> element may be avoided if there is no need for a caption, in such a case the <code>&lt;img src="..."&gt;</code> element is a child of the <code>&lt;section&gt;</code> element. The article header may contain a picture as well, which will be full width.</p>
             </figcaption>
           </figure>
           <h2>Videos</h2>
