close #120 | Allow full width images, tables and code snippets.

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 &lt;/section&gt;</code></pre>
             <figcaption>
               <h1>Code snippet of an image, with a descriptive caption.</h1>
-              <p>The <code>&lt;figure&gt;</code> element may be avoided if there is no need for a caption, in such a case the <code>&lt;img src="..."&gt;</code> element is a child of the <code>&lt;section&gt;</code> element. The article header may contain a picture as well, which will be full width.</p>
+              <p>The <code>&lt;figure&gt;</code> element may be avoided if there is no need for a caption, in such a case the <code>&lt;img&gt;</code> element is a child of the <code>&lt;section&gt;</code> element. The article header may contain a picture as well, which will be full width.</p>
             </figcaption>
           </figure>
           <h2>Videos</h2>
@@ -517,7 +517,7 @@
         <footer>
           <section>
             <h1>Footnotes</h1>
-            <p>At the end of the article, you may want to add further information, like additional resources, footnotes, acknowledgements, author contribution, references, updates, corrections and so on. Rapido provides style rules for <strong>headings</strong>, <strong>paragraphs</strong>, <strong>lists</strong> and <strong>code snippets</strong> in the article footer.</p>
+            <p>At the end of the article, you may want to add further information, like additional resources, footnotes, acknowledgements, author contribution, references, updates, corrections and so on. Rapido provides style rules for <strong>headings</strong>, <strong>paragraphs</strong>, <strong>lists</strong>, <strong>tables</strong> and <strong>code snippets</strong> in the article footer.</p>
             <pre><code>&lt;article&gt;
   ...</code>
 <mark><code>  &lt;footer&gt;
